# pgrust

./: .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.early-access  README.md  TODO.md  WORK_TRACKER.md  analyze_stacks.sh  bench_insert_postgres_dynamic.sh  build_r1.txt  build_r10.txt  build_r11.txt  build_r12.txt  build_r13.txt  build_r14.txt  build_r2.txt  build_r3.txt  build_r4.txt  build_r5.txt  build_r6.txt  build_r7.txt  build_r8.txt  build_r9.txt  docker-entrypoint.sh  indexplan.txt  indexplan_phase3.txt  issues.jsonl  postgres-api-boundaries.md  profile.sh  profile_insert.sh  run_agg.sh  run_inet.sh  run_subselect.sh  rust-toolchain.toml  (+6 more)
.beads/: config.yaml  issues.jsonl  metadata.json
.cargo/: config.toml
.config/: nextest.toml
.githooks/: pre-commit
.isolated-target/: .rustc_info.json
antithesis/: Dockerfile  README.md  setup-complete.sh
bench/: analyze_callers.sh  analyze_callers_deep.sh  analyze_inclusive.sh  analyze_profile.sh  bench_explain.sh  bench_insert_pgrust_wire.sh  bench_insert_postgres.sh  bench_insert_postgres_autocommit.sh  bench_regex_compare.sh  bench_regex_redux.sh  bench_select_wire.sh  profile.sh  profile_insert.sh  profile_server.sh
bugs/: 003-buffer-pool-pin-count-races.md  004-txns-content-lock-ordering-deadlock.md  005-stale-ctid-in-try-claim-tuple.md  005-try-read-contention-busy-loop.md  006-textref-lifetime-leaks-across-detached-rows.md
crates/amcheck-verify-common-seams/: Cargo.toml
crates/amcheck-verify-common-seams/src/: lib.rs
crates/backend-access-brin-bloom/: Cargo.toml
crates/backend-access-brin-bloom/src/: lib.rs  tests.rs
crates/backend-access-brin-entry-seams/: Cargo.toml
crates/backend-access-brin-entry-seams/src/: lib.rs
crates/backend-access-brin-inclusion/: Cargo.toml
crates/backend-access-brin-inclusion/src/: lib.rs  tests.rs
crates/backend-access-brin-insert-vacuum/: Cargo.toml
crates/backend-access-brin-insert-vacuum-seams/: Cargo.toml
crates/backend-access-brin-insert-vacuum-seams/src/: lib.rs
crates/backend-access-brin-insert-vacuum/src/: fmgr_builtins.rs  lib.rs
crates/backend-access-brin-minmax/: Cargo.toml
crates/backend-access-brin-minmax-multi/: Cargo.toml
crates/backend-access-brin-minmax-multi/src/: codec.rs  distance.rs  lib.rs  ranges.rs
crates/backend-access-brin-minmax/src/: lib.rs  tests.rs
crates/backend-access-brin-pageops/: Cargo.toml
crates/backend-access-brin-pageops/src/: brin_internal.rs  brin_page.rs  brin_pageops.rs  brin_revmap.rs  lib.rs  wal.rs
crates/backend-access-brin-scan/: Cargo.toml
crates/backend-access-brin-scan/src/: lib.rs
crates/backend-access-brin-tuple/: Cargo.toml
crates/backend-access-brin-tuple/src/: internal.rs  lib.rs  tests.rs  tuple.rs
crates/backend-access-brin-validate/: Cargo.toml
crates/backend-access-brin-validate/src/: lib.rs  tests.rs
crates/backend-access-brin-xlog/: Cargo.toml
crates/backend-access-brin-xlog/src/: lib.rs
crates/backend-access-common-detoast/: Cargo.toml
crates/backend-access-common-detoast-seams/: Cargo.toml
crates/backend-access-common-detoast-seams/src/: lib.rs
crates/backend-access-common-detoast/src/: lib.rs  tests.rs
crates/backend-access-common-heaptuple/: Cargo.toml
crates/backend-access-common-heaptuple/src/: flat.rs  lib.rs  tests.rs
crates/backend-access-common-indextuple/: Cargo.toml
crates/backend-access-common-indextuple-seams/: Cargo.toml
crates/backend-access-common-indextuple-seams/src/: lib.rs
crates/backend-access-common-indextuple/src/: lib.rs  tests.rs
crates/backend-access-common-next/: Cargo.toml
crates/backend-access-common-next-seams/: Cargo.toml
crates/backend-access-common-next-seams/src/: lib.rs
crates/backend-access-common-next/src/: attmap.rs  lib.rs  syncscan.rs  tupconvert.rs
crates/backend-access-common-printtup/: Cargo.toml
crates/backend-access-common-printtup-seams/: Cargo.toml
crates/backend-access-common-printtup-seams/src/: lib.rs
crates/backend-access-common-printtup/src/: lib.rs  printsimple.rs  psql_format.rs  tests.rs
crates/backend-access-common-relation/: Cargo.toml
crates/backend-access-common-relation-seams/: Cargo.toml
crates/backend-access-common-relation-seams/src/: lib.rs
crates/backend-access-common-relation/src/: lib.rs  tests.rs
crates/backend-access-common-reloptions/: Cargo.toml
crates/backend-access-common-reloptions-seams/: Cargo.toml
crates/backend-access-common-reloptions-seams/src/: lib.rs
crates/backend-access-common-reloptions/src/: lib.rs
crates/backend-access-common-scankey/: Cargo.toml
crates/backend-access-common-scankey/src/: lib.rs
crates/backend-access-common-session-seams/: Cargo.toml
crates/backend-access-common-session-seams/src/: lib.rs
deferred/: bit-sql-psql-describe-compat.md  brin-postgres-compat-followups.md  catalog-control-file-vs-pg-control.md  compiled-query-execution.md  concrete-catalog-lookup.md  database-scoped-view-query-cache.md  executor-stack-overflow-followups.md  expression-node-taxonomy-vs-postgres.md  foreign-key-deferral-followups.md  from-function-metadata.md  from-list-srf-cross-join.md  hashed-exists-subplans-and-subquery-cte-reuse.md  inline-exec-into-trait.md  json-and-jsonb-builder-gaps.md  jsonb-index-and-opclass-support.md  jsonb-mutation-and-jsonpath.md  jsonb-row-and-record-functions.md  keyed-command-catalog-lookups.md  legacy-catalog-store-ddl-paths.md  numeric-sql-noop-ddl.md  pg-stat-activity-query-text-fidelity.md  precompute-cast-functions.md  psql-describe-shim-boundary.md  range-runtime-followups.md  remove-update-delete-page-row-vector.md  serial-sequence-followups.md  statement-timeout-copy-stdin-upload.md  stats-subsystem-pg-alignment.md  synthetic-pg-class.md  table-inheritance-v1-limitations.md  temp-catalog-first-class-rows.md  temp-schema-search-path.md  textref-lifetime-safeguards.md  visibility-map-followups.md  wal-update-delete-deltas.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: parse.rs  startup_packet.rs
(+15497 files in other folders)
