[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
publish = false

# Linking dominates build time on this kind of workspace; keep debuginfo light.
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"
incremental = false

[profile.dev.build-override]
debug = 0
codegen-units = 256

[profile.fast-check]
inherits = "dev"
debug = 0
split-debuginfo = "off"
incremental = false

[profile.release]
debug = 0
strip = "symbols"
lto = false
codegen-units = 1

# wasm64 single-user boot bring-up profile. The default dev profile produces a
# ~278 MB wasm module (no opt; huge code) whose wasmtime cold-compile takes ~10
# min, throttling boot iteration. This profile shrinks the module dramatically:
#   opt-level = "z"  -> smallest code (size, not speed; runtime speed is
#                       irrelevant for boot bring-up) — fewer wasm instructions
#                       for wasmtime to compile.
#   debug = "line-tables-only" + strip = false -> keep the wasm name section +
#                       file:line so wasmtime trap backtraces are READABLE
#                       (essential for boot-trap diagnosis). The module stays
#                       ~42 MB; `wasm-tools strip -a` can drop them for a final
#                       fast run once boot is clean.
#   panic = "abort"  -> the wasm64-unknown-unknown target spec hard-codes
#                       "panic-strategy": "abort", so `-Cpanic=unwind` is
#                       silently overridden — a profile-level `panic = "unwind"`
#                       does NOT enable unwinding here (verified: a syntax error
#                       still aborts via wasm `unreachable`). Real unwinding would
#                       need a CUSTOM target spec with panic-strategy=unwind +
#                       `-Ctarget-feature=+exception-handling` + wasmtime's
#                       exceptions proposal — a separate, deeper change.
#                       CONSEQUENCE (documented blocker): pgrust reports
#                       ereport(ERROR)/parser errors by panicking with a sentinel
#                       that the tcop loop's catch_unwind is meant to recover;
#                       under abort that recovery can't run, so any SQL that
#                       raises an error aborts the process. Error-free statements
#                       run fine.
# Build with: cargo +nightly build -Zbuild-std=std,panic_unwind,panic_abort \
#   --bin postgres --target wasm64-unknown-unknown --profile wasm-boot
[profile.wasm-boot]
inherits = "release"
opt-level = "z"
debug = "line-tables-only"
strip = false
lto = false
codegen-units = 16
panic = "abort"
