[package]
name = "amcheck-verify-common-seams"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "amcheck_verify_common_seams"
path = "src/lib.rs"

[dependencies]
seam-core = { path = "../seam-core" }
types-core = { path = "../types-core" }
types-error = { path = "../types-error" }
types-rel = { path = "../types-rel" }
types-storage = { path = "../types-storage" }
