[package]
name = "backend-access-brin-bloom"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "backend_access_brin_bloom"
path = "src/lib.rs"

[dependencies]
mcx = { path = "../mcx" }
types-core = { path = "../types-core" }
types-error = { path = "../types-error" }
types-brin = { path = "../types-brin" }
types-rel = { path = "../types-rel" }
types-scan = { path = "../types-scan" }
types-tuple = { path = "../types-tuple" }
types-datum = { path = "../types-datum" }
types-storage = { path = "../types-storage" }
backend-utils-error = { path = "../backend-utils-error" }
backend-access-index-indexam-seams = { path = "../backend-access-index-indexam-seams" }
backend-utils-cache-typcache-seams = { path = "../backend-utils-cache-typcache-seams" }
backend-utils-fmgr-fmgr-seams = { path = "../backend-utils-fmgr-fmgr-seams" }
common-hashfn-seams = { path = "../common-hashfn-seams" }

[dev-dependencies]
types-typcache = { path = "../types-typcache" }
common-hashfn = { path = "../common-hashfn" }
