[package]
name = "backend-access-brin-entry-seams"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "backend_access_brin_entry_seams"
path = "src/lib.rs"

[dependencies]
seam-core = { path = "../seam-core" }
types-error = { path = "../types-error" }
types-tuple = { path = "../types-tuple" }
types-brin = { path = "../types-brin" }
types-scan = { path = "../types-scan" }
types-rel = { path = "../types-rel" }
types-core = { path = "../types-core" }
mcx = { path = "../mcx" }
