[package]
name = "backend-access-brin-insert-vacuum-seams"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "backend_access_brin_insert_vacuum_seams"
path = "src/lib.rs"

[dependencies]
seam-core = { path = "../seam-core" }
mcx = { path = "../mcx" }
types-core = { path = "../types-core" }
types-error = { path = "../types-error" }
types-rel = { path = "../types-rel" }
types-brin = { path = "../types-brin" }
types-tuple = { path = "../types-tuple" }
types-tableam = { path = "../types-tableam" }
