[package]
name = "backend-access-brin-insert-vacuum"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "backend_access_brin_insert_vacuum"
path = "src/lib.rs"

[dependencies]
mcx = { path = "../mcx" }
types-core = { path = "../types-core" }
types-error = { path = "../types-error" }
types-storage = { path = "../types-storage" }
types-tuple = { path = "../types-tuple" }
types-rel = { path = "../types-rel" }
types-brin = { path = "../types-brin" }
types-nodes = { path = "../types-nodes" }
types-tableam = { path = "../types-tableam" }
types-acl = { path = "../types-acl" }
types-catalog = { path = "../types-catalog" }

# Page-byte primitives (bufpage.c) for brinGetStats / PageGetFreeSpace.
backend-storage-page = { path = "../backend-storage-page" }

# Owned engine layers (direct deps — acyclic): the page/revmap layer and the
# tuple codec, plus the F2 scan crate for brin_build_desc / brin_free_desc /
# BrinScan (brin.c's own desc builder; we do NOT close a cycle because the scan
# crate reaches us only through the brin-insert-vacuum-seams it dispatches).
backend-access-brin-pageops = { path = "../backend-access-brin-pageops" }
backend-access-brin-tuple = { path = "../backend-access-brin-tuple" }
backend-access-brin-scan = { path = "../backend-access-brin-scan" }

# Inward seams this crate owns + installs.
backend-access-brin-insert-vacuum-seams = { path = "../backend-access-brin-insert-vacuum-seams" }

# Cross-owner seam crates.
backend-access-brin-entry-seams = { path = "../backend-access-brin-entry-seams" }
backend-storage-buffer-bufmgr-seams = { path = "../backend-storage-buffer-bufmgr-seams" }
backend-storage-freespace-seams = { path = "../backend-storage-freespace-seams" }
backend-utils-cache-relcache-seams = { path = "../backend-utils-cache-relcache-seams" }
backend-access-table-table-seams = { path = "../backend-access-table-table-seams" }
backend-access-table-tableam-seams = { path = "../backend-access-table-tableam-seams" }
backend-access-index-indexam-seams = { path = "../backend-access-index-indexam-seams" }
backend-catalog-index-seams = { path = "../backend-catalog-index-seams" }
backend-catalog-aclchk-seams = { path = "../backend-catalog-aclchk-seams" }
backend-utils-init-miscinit-seams = { path = "../backend-utils-init-miscinit-seams" }
backend-utils-misc-guc-seams = { path = "../backend-utils-misc-guc-seams" }
backend-access-transam-xlog-seams = { path = "../backend-access-transam-xlog-seams" }
backend-utils-adt-scalar-seams = { path = "../backend-utils-adt-scalar-seams" }
backend-utils-error = { path = "../backend-utils-error" }
