[package]
name = "backend-access-brin-scan"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "backend_access_brin_scan"
path = "src/lib.rs"

[dependencies]
mcx = { path = "../mcx" }
types-core = { path = "../types-core" }
types-error = { path = "../types-error" }
types-storage = { path = "../types-storage" }
types-tuple = { path = "../types-tuple" }
types-rel = { path = "../types-rel" }
types-brin = { path = "../types-brin" }
types-scan = { path = "../types-scan" }
types-snapshot = { path = "../types-snapshot" }
types-amapi = { path = "../types-amapi" }
types-tableam = { path = "../types-tableam" }
types-tidbitmap = { path = "../types-tidbitmap" }

# owned engine layers (direct deps — acyclic: scan owns brin.c, consumes pageops/tuple)
backend-access-brin-pageops = { path = "../backend-access-brin-pageops" }
backend-access-brin-tuple = { path = "../backend-access-brin-tuple" }
backend-access-common-reloptions-seams = { path = "../backend-access-common-reloptions-seams" }

# cross-owner seam crates
backend-access-brin-entry-seams = { path = "../backend-access-brin-entry-seams" }
backend-access-brin-insert-vacuum-seams = { path = "../backend-access-brin-insert-vacuum-seams" }
backend-storage-buffer-bufmgr-seams = { path = "../backend-storage-buffer-bufmgr-seams" }
backend-utils-cache-relcache-seams = { path = "../backend-utils-cache-relcache-seams" }
backend-access-table-table-seams = { path = "../backend-access-table-table-seams" }
backend-catalog-index-seams = { path = "../backend-catalog-index-seams" }
backend-nodes-core-seams = { path = "../backend-nodes-core-seams" }
backend-utils-activity-pgstat-seams = { path = "../backend-utils-activity-pgstat-seams" }
backend-utils-error = { path = "../backend-utils-error" }
