[package]
name = "backend-access-brin-tuple"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "backend_access_brin_tuple"
path = "src/lib.rs"

[dependencies]
mcx = { path = "../mcx" }
types-core = { path = "../types-core" }
types-datum = { path = "../types-datum" }
types-error = { path = "../types-error" }
types-tuple = { path = "../types-tuple" }
types-typcache = { path = "../types-typcache" }
types-brin = { path = "../types-brin" }
backend-access-common-heaptuple = { path = "../backend-access-common-heaptuple" }
backend-access-common-detoast-seams = { path = "../backend-access-common-detoast-seams" }
backend-access-common-toast-internals-seams = { path = "../backend-access-common-toast-internals-seams" }
backend-utils-cache-typcache-seams = { path = "../backend-utils-cache-typcache-seams" }
backend-utils-adt-scalar-seams = { path = "../backend-utils-adt-scalar-seams" }
backend-access-brin-entry-seams = { path = "../backend-access-brin-entry-seams" }

[dev-dependencies]
types-rel = { path = "../types-rel" }
types-storage = { path = "../types-storage" }
