[package]
name = "backend-access-brin-validate"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "backend_access_brin_validate"
path = "src/lib.rs"

[dependencies]
mcx = { path = "../mcx" }
types-core = { path = "../types-core" }
types-error = { path = "../types-error" }
types-amvalidate = { path = "../types-amvalidate" }
types-hash = { path = "../types-hash" }
types-opclass = { path = "../types-opclass" }
backend-access-index-amvalidate-seams = { path = "../backend-access-index-amvalidate-seams" }
backend-utils-adt-format-type-seams = { path = "../backend-utils-adt-format-type-seams" }
backend-utils-adt-regproc-seams = { path = "../backend-utils-adt-regproc-seams" }
backend-utils-cache-lsyscache-seams = { path = "../backend-utils-cache-lsyscache-seams" }
backend-utils-cache-syscache-seams = { path = "../backend-utils-cache-syscache-seams" }
backend-utils-error-seams = { path = "../backend-utils-error-seams" }
