[package]
name = "backend-access-brin-xlog"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "backend_access_brin_xlog"
path = "src/lib.rs"

[dependencies]
mcx = { path = "../mcx" }
types-core = { path = "../types-core" }
types-error = { path = "../types-error" }
types-storage = { path = "../types-storage" }
types-tuple = { path = "../types-tuple" }
types-wal = { path = "../types-wal" }

# Owns these rmgr-table callbacks (brin_redo / brin_mask); installs them on
# landing.
backend-access-brin-xlog-seams = { path = "../backend-access-brin-xlog-seams" }

# Critical-section count / ereport (miscadmin.h, elog.c).
backend-utils-error = { path = "../backend-utils-error" }

# Page-byte primitives (bufpage.c): PageInit / PageAddItemExtended /
# PageIndexTupleDeleteNoCompact / PageIndexTupleOverwrite / PageSetLSN /
# ItemPointer helpers.
backend-storage-page = { path = "../backend-storage-page" }

# WAL-recovery substrate.
backend-access-transam-xlogutils = { path = "../backend-access-transam-xlogutils" }
backend-access-transam-xlogreader-seams = { path = "../backend-access-transam-xlogreader-seams" }

# Buffer manager (bufmgr.c) — page access during redo.
backend-storage-buffer-bufmgr-seams = { path = "../backend-storage-buffer-bufmgr-seams" }

# Page masking for WAL consistency checking (bufmask.c).
backend-access-common-bufmask-seams = { path = "../backend-access-common-bufmask-seams" }

[dev-dependencies]
seams-init = { path = "../seams-init" }
