[package]
name = "backend-access-common-detoast-seams"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "backend_access_common_detoast_seams"
path = "src/lib.rs"

[dependencies]
seam-core = { path = "../seam-core" }
types-error = { path = "../types-error" }
types-core = { path = "../types-core" }
mcx = { path = "../mcx" }
