[package]
name = "backend-access-common-detoast"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "backend_access_common_detoast"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
mcx = { path = "../mcx" }
types-error = { path = "../types-error" }
types-datum = { path = "../types-datum" }
backend-access-common-detoast-seams = { path = "../backend-access-common-detoast-seams" }
backend-access-common-toast-internals-seams = { path = "../backend-access-common-toast-internals-seams" }
backend-access-common-toast-compression-seams = { path = "../backend-access-common-toast-compression-seams" }
backend-utils-adt-misc2-seams = { path = "../backend-utils-adt-misc2-seams" }
common-pglz-seams = { path = "../common-pglz-seams" }
