[package]
name = "backend-access-common-heaptuple"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "backend_access_common_heaptuple"
path = "src/lib.rs"

[dependencies]
types = { path = "../types" }
backend-utils-adt-misc2-seams = { path = "../backend-utils-adt-misc2-seams" }
backend-access-heap-heaptoast-seams = { path = "../backend-access-heap-heaptoast-seams" }
