[package]
name = "backend-access-common-heaptuple"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "backend_access_common_heaptuple"
path = "src/lib.rs"

# `trace` (default-on) enables env-gated deform tracing via pgrust-trace.
# Kept behind a feature because this crate is `#![no_std]`; the feature can be
# disabled to guarantee no std linkage if ever needed.
[features]
default = ["trace"]
trace = ["pgrust-trace"]

[dependencies]
pgrust-trace = { path = "../pgrust-trace", optional = true }
types-core = { path = "../types-core" }
types-error = { path = "../types-error" }
types-datum = { path = "../types-datum" }
types-tuple = { path = "../types-tuple" }
backend-access-heap-heaptoast-seams = { path = "../backend-access-heap-heaptoast-seams" }
backend-utils-adt-misc2-seams = { path = "../backend-utils-adt-misc2-seams" }
mcx = { path = "../mcx" }
