[package]
name = "backend-access-common-indextuple-seams"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "backend_access_common_indextuple_seams"
path = "src/lib.rs"

[dependencies]
seam-core = { path = "../seam-core" }
types-error = { path = "../types-error" }
types-nodes = { path = "../types-nodes" }
types-tuple = { path = "../types-tuple" }
