[package]
name = "backend-access-common-indextuple"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "backend_access_common_indextuple"
path = "src/lib.rs"

[dependencies]
types-core = { path = "../types-core" }
types-error = { path = "../types-error" }
types-datum = { path = "../types-datum" }
types-tuple = { path = "../types-tuple" }
types-rel = { path = "../types-rel" }
types-nodes = { path = "../types-nodes" }
mcx = { path = "../mcx" }
backend-utils-error = { path = "../backend-utils-error" }
backend-access-common-heaptuple = { path = "../backend-access-common-heaptuple" }
backend-access-common-tupdesc = { path = "../backend-access-common-tupdesc" }
backend-access-common-detoast-seams = { path = "../backend-access-common-detoast-seams" }
backend-access-common-toast-internals-seams = { path = "../backend-access-common-toast-internals-seams" }
backend-access-common-indextuple-seams = { path = "../backend-access-common-indextuple-seams" }
