[package]
name = "backend-access-common-next-seams"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "backend_access_common_next_seams"
path = "src/lib.rs"

[dependencies]
seam-core = { path = "../seam-core" }
mcx = { path = "../mcx" }
types-error = { path = "../types-error" }
types-tuple = { path = "../types-tuple" }
types-nodes = { path = "../types-nodes" }
