[package]
name = "backend-access-common-next"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "backend_access_common_next"
path = "src/lib.rs"

[dependencies]
mcx = { path = "../mcx" }
types-core = { path = "../types-core" }
types-datum = { path = "../types-datum" }
types-tuple = { path = "../types-tuple" }
types-nodes = { path = "../types-nodes" }
types-storage = { path = "../types-storage" }
types-error = { path = "../types-error" }

backend-nodes-core = { path = "../backend-nodes-core" }
backend-access-common-heaptuple = { path = "../backend-access-common-heaptuple" }
backend-utils-adt-format-type = { path = "../backend-utils-adt-format-type" }

# Inward seam crates this unit owns and installs.
backend-access-common-next-seams = { path = "../backend-access-common-next-seams" }
backend-access-common-syncscan-seams = { path = "../backend-access-common-syncscan-seams" }
backend-access-common-tupconvert-seams = { path = "../backend-access-common-tupconvert-seams" }

# Outward seam: the slot-payload owner (execTuples) drives execute_attr_map_slot.
backend-executor-execTuples-seams = { path = "../backend-executor-execTuples-seams" }
