[package]
name = "backend-access-common-printtup-seams"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "backend_access_common_printtup_seams"
path = "src/lib.rs"

[dependencies]
seam-core = { path = "../seam-core" }
types-dest = { path = "../types-dest" }
types-nodes = { path = "../types-nodes" }
types-portal = { path = "../types-portal" }
types-tuple = { path = "../types-tuple" }
types-core = { path = "../types-core" }
types-error = { path = "../types-error" }
mcx = { path = "../mcx" }
