[package]
name = "backend-access-common-printtup"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "backend_access_common_printtup"
path = "src/lib.rs"

[dependencies]
mcx = { path = "../mcx" }
types-core = { path = "../types-core" }
types-error = { path = "../types-error" }
types-datum = { path = "../types-datum" }
types-dest = { path = "../types-dest" }
types-tuple = { path = "../types-tuple" }
types-stringinfo = { path = "../types-stringinfo" }
backend-libpq-pqformat = { path = "../backend-libpq-pqformat" }
