[package]
name = "backend-access-common-printtup"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "backend_access_common_printtup"
path = "src/lib.rs"

[dependencies]
wasm-libc-shim = { path = "../wasm-libc-shim" }
mcx = { path = "../mcx" }
types-core = { path = "../types-core" }
types-error = { path = "../types-error" }
types-dest = { path = "../types-dest" }
types-nodes = { path = "../types-nodes" }
types-tuple = { path = "../types-tuple" }
types-stringinfo = { path = "../types-stringinfo" }
backend-libpq-pqformat = { path = "../backend-libpq-pqformat" }
backend-executor-execTuples-seams = { path = "../backend-executor-execTuples-seams" }
backend-utils-cache-lsyscache-seams = { path = "../backend-utils-cache-lsyscache-seams" }
backend-utils-fmgr-fmgr-seams = { path = "../backend-utils-fmgr-fmgr-seams" }
backend-utils-adt-varlena-seams = { path = "../backend-utils-adt-varlena-seams" }
backend-tcop-dest = { path = "../backend-tcop-dest" }
backend-tcop-dest-seams = { path = "../backend-tcop-dest-seams" }
backend-access-common-printtup-seams = { path = "../backend-access-common-printtup-seams" }
types-portal = { path = "../types-portal" }
