[package]
name = "backend-access-common-relation-seams"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "backend_access_common_relation_seams"
path = "src/lib.rs"

[dependencies]
seam-core = { path = "../seam-core" }
types-core = { path = "../types-core" }
types-error = { path = "../types-error" }
types-rel = { path = "../types-rel" }
types-tuple = { path = "../types-tuple" }
mcx = { path = "../mcx" }
types-storage = { path = "../types-storage" }
