[package]
name = "backend-access-common-relation"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "backend_access_common_relation"
path = "src/lib.rs"

[dependencies]
mcx = { path = "../mcx" }
types-core = { path = "../types-core" }
types-error = { path = "../types-error" }
types-rel = { path = "../types-rel" }
types-tuple = { path = "../types-tuple" }
types-storage = { path = "../types-storage" }
backend-access-common-relation-seams = { path = "../backend-access-common-relation-seams" }
backend-utils-cache-relcache-seams = { path = "../backend-utils-cache-relcache-seams" }
backend-utils-cache-syscache-seams = { path = "../backend-utils-cache-syscache-seams" }
backend-utils-cache-inval-seams = { path = "../backend-utils-cache-inval-seams" }
backend-utils-init-miscinit-seams = { path = "../backend-utils-init-miscinit-seams" }
backend-utils-activity-pgstat-seams = { path = "../backend-utils-activity-pgstat-seams" }
backend-storage-lmgr-lmgr-seams = { path = "../backend-storage-lmgr-lmgr-seams" }
backend-catalog-namespace-seams = { path = "../backend-catalog-namespace-seams" }
backend-access-transam-xact-seams = { path = "../backend-access-transam-xact-seams" }
