[package]
name = "backend-access-common-reloptions-seams"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "backend_access_common_reloptions_seams"
path = "src/lib.rs"

[dependencies]
seam-core = { path = "../seam-core" }
types-error = { path = "../types-error" }
types-reloptions = { path = "../types-reloptions" }
