[package]
name = "backend-access-common-reloptions"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "backend_access_common_reloptions"
path = "src/lib.rs"

[dependencies]
mcx = { path = "../mcx" }
types-core = { path = "../types-core" }
types-error = { path = "../types-error" }
types-datum = { path = "../types-datum" }
types-storage = { path = "../types-storage" }
types-tuple = { path = "../types-tuple" }
types-reloptions = { path = "../types-reloptions" }
backend-access-common-reloptions-seams = { path = "../backend-access-common-reloptions-seams" }
backend-utils-adt-arrayfuncs-seams = { path = "../backend-utils-adt-arrayfuncs-seams" }
backend-utils-misc-guc-seams = { path = "../backend-utils-misc-guc-seams" }
backend-commands-define-seams = { path = "../backend-commands-define-seams" }
backend-access-index-amapi-seams = { path = "../backend-access-index-amapi-seams" }
