[package]
name = "backend-access-common-scankey"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "backend_access_common_scankey"
path = "src/lib.rs"

[dependencies]
types-core = { path = "../types-core" }
types-error = { path = "../types-error" }
types-scan = { path = "../types-scan" }
types-tuple = { path = "../types-tuple" }
backend-utils-fmgr-fmgr-seams = { path = "../backend-utils-fmgr-fmgr-seams" }
