[package]
name = "backend-access-common-session-seams"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "backend_access_common_session_seams"
path = "src/lib.rs"

[dependencies]
mcx = { path = "../mcx" }
seam-core = { path = "../seam-core" }
types-error = { path = "../types-error" }
types-tuple = { path = "../types-tuple" }
